--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -2,26 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
-        tools:text = "This is main Screen"
-        style="@style/TextNormBlack"/>
-
     <Button
-        android:id="@+id/service"
+        android:id="@+id/start_service"
+        style="@style/SuppAppButton"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/service"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        style="@style/SuppAppButton"/>
+        android:layout_marginEnd="16dp"
+        android:text="@string/start_service" />
+
+    <Button
+        android:id="@+id/stop_service"
+        style="@style/SuppAppButton"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/stop_service" />
 
 </LinearLayout>
