--- a/app/src/main/res/drawable/shape_corner_bg.xml
+++ b/app/src/main/res/drawable/shape_corner_bg.xml
@@ -5,7 +5,7 @@
     <solid android:color="@color/color_white" />
 
     <stroke android:width="1dp"
-        android:color="@color/color_main_background"
+        android:color="@color/colorPrimary"
         />
 
     <padding android:bottom="1dp"
