--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -4,6 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        style="@style/TextNormBlack"
+        android:text="@string/enter_the_number_of_push_notifications" />
+
+    <EditText
+        android:id="@+id/push_count"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/shape_corner_bg"
+        android:layout_marginStart="56dp"
+        android:gravity="center"
+        android:inputType="number"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="56dp" />
+
     <Button
         android:id="@+id/start_service"
         style="@style/SuppAppButton"
