--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -24,4 +24,14 @@
         android:layout_marginTop="16dp"
         style="@style/SuppAppButton"/>
 
+    <Button
+        android:id="@+id/content_provider"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="@string/content_provider"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        style="@style/SuppAppButton"/>
+
 </LinearLayout>
