--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,14 @@
     <item name="android:textSize">20sp</item>
   </style>
 
+  <style name="TextNormWhite" parent="Text">
+    <item name="android:textColor">@color/color_white</item>
+    <item name="fontFamily">sans-serif</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textSize">20sp</item>
+  </style>
+
   <style name="SuppAppButton" parent="@android:style/Widget.Button">
     <item name="android:gravity">center</item>
     <item name="android:lines">1</item>
