--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="?android:attr/selectableItemBackground"
+                android:background="@drawable/custom_ripple"
                 android:src="@drawable/ic_back" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
