--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -33,14 +33,14 @@
             android:orientation="vertical"
             android:paddingBottom="50dp">
 
-            <TextView
-                android:id="@+id/description"
-                style="@style/TextNormBlack"
+            <Button
+                style="@style/SuppAppButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:gravity="center"
-                tools:text="This is main Screen" />
+                android:layout_marginEnd="16dp"
+                android:text="TextView" />
 
             <Button
                 style="@style/SuppAppButton"
