--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -3,24 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <TextView
-                style="@style/TextNormWhite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/home" />
-        </LinearLayout>
+        app:title="@string/home"
+        style="@style/SupperAppToolbar">
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -34,13 +25,14 @@
             android:paddingBottom="50dp">
 
             <Button
+                android:id="@+id/text_view"
                 style="@style/SuppAppButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="TextView" />
+                android:text="@string/textview" />
 
             <Button
                 style="@style/SuppAppButton"
