--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,7 +34,15 @@
     <item name="android:textSize">12sp</item>
   </style>
 
-  <style name="TextNormBlack" parent="Text">
+  <style name="TextMediumBlack" parent="Text">
+    <item name="android:textColor">@color/color_black</item>
+    <item name="fontFamily">sans-serif</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textSize">16sp</item>
+  </style>
+
+  <style name="TextBigBlack" parent="Text">
     <item name="android:textColor">@color/color_black</item>
     <item name="fontFamily">sans-serif</item>
     <item name="android:textStyle">normal</item>
