feature: textView screen - read full

--- a/app/src/main/res/layout/fragment_text_view.xml
+++ b/app/src/main/res/layout/fragment_text_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        app:navigationIcon="@drawable/ic_back"></androidx.appcompat.widget.Toolbar>
+        app:navigationIcon="@drawable/ic_back" />
 
 
     <LinearLayout
