feature: add textView fonts

--- a/app/src/main/res/layout/fragment_text_view.xml
+++ b/app/src/main/res/layout/fragment_text_view.xml
@@ -14,7 +14,6 @@
         android:background="?attr/colorPrimary"
         app:navigationIcon="@drawable/ic_back" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -39,5 +38,23 @@
             android:text="@string/read_full"
             android:textColor="@color/colorPrimary" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textview"
+        android:fontFamily="monospace"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:fontFamily="casual"
+        android:text="@string/textview"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </LinearLayout>
