feature: textView screen - add font

--- a/app/src/main/res/layout/fragment_text_view.xml
+++ b/app/src/main/res/layout/fragment_text_view.xml
@@ -16,9 +16,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_height="wrap_content">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/long_text"
@@ -42,10 +42,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/textview"
-        android:fontFamily="monospace"
-        android:layout_marginTop="16dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:fontFamily="monospace"
+        android:text="@string/textview_monospace_font"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
@@ -54,7 +54,24 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:fontFamily="casual"
-        android:text="@string/textview"
+        android:text="@string/textview_casual_font"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        style="@style/TextMediumBlack"
+        android:text="@string/textmediumblack_style"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        style="@style/TextBigBlack"
+        android:text="@string/textbigblack_style"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </LinearLayout>
