--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -35,13 +35,14 @@
                 android:text="@string/textview" />
 
             <Button
+                android:id="@+id/edit_text"
                 style="@style/SuppAppButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="EditText" />
+                android:text="@string/edittext" />
 
             <Button
                 style="@style/SuppAppButton"
