--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,10 +15,6 @@
 
   </style>
 
-  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-  <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
   <style name="SupperAppToolbar">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">?attr/actionBarSize</item>
@@ -50,6 +46,14 @@
     <item name="android:textSize">20sp</item>
   </style>
 
+  <style name="TextBigGray" parent="Text">
+    <item name="android:textColor">@color/color_gray</item>
+    <item name="fontFamily">sans-serif</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textSize">20sp</item>
+  </style>
+
   <style name="TextBigWhite" parent="Text">
     <item name="android:textColor">@color/color_white</item>
     <item name="fontFamily">sans-serif</item>
@@ -67,5 +71,10 @@
     <item name="android:background">@drawable/selector_button_background</item>
     <item name="android:focusable">true</item>
     <item name="android:clickable">true</item>
+  </style>
+
+
+  <style name="SuperAppTextInputLayout" parent="@android:style/TextAppearance">
+    <item name="android:textColor">@color/colorPrimary</item>
   </style>
 </resources>
