--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -55,6 +55,7 @@
                 android:text="@string/btn_text" />
 
             <Button
+                android:id="@+id/app_bar"
                 style="@style/SuppAppButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
