--- a/app/src/main/res/menu/menu_app_bar_screen.xml
+++ b/app/src/main/res/menu/menu_app_bar_screen.xml
@@ -10,7 +10,8 @@
     <item android:id="@+id/action_search"
         android:title="@string/search"
         android:icon="@drawable/ic_search"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView" />
 
     <item android:id="@+id/action_settings"
         android:title="@string/settings"
