--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -65,6 +65,7 @@
                 android:text="@string/app_bar" />
 
             <Button
+                android:id="@+id/toolbar_button"
                 style="@style/SuppAppButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
