--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -13,14 +13,24 @@
         app:navigationIcon="@drawable/ic_back" />
 
     <Button
-        android:id="@+id/select_image"
+        android:id="@+id/select_image_from_gallery"
         style="@style/SuppAppButton"
         android:padding="6dp"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:text="@string/select_image" />
+        android:text="@string/select_image_from_gallery" />
+
+    <Button
+        android:id="@+id/select_image_from_camera"
+        style="@style/SuppAppButton"
+        android:padding="6dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp"
+        android:text="@string/select_image_from_camera" />
 
     <ImageView
         android:id="@+id/image"
