--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -103,6 +103,7 @@
                 android:text="@string/adapterview" />
 
             <Button
+                android:id="@+id/recycler_view"
                 style="@style/SuppAppButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
